package es.uah.matcomp.ed.lineales.lista.simple;

public class ElementoLS {
    private Object data;

    public Object getData() {
        return data;
    }

    public Object setData(Object o) {
        return data;
    }
}
